--- a/index.html
+++ b/index.html
@@ -2,15 +2,31 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Intro to Responsive Design</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<main>
-		<h1>Using media query with responsive design</h1>
+		<h1>Using media queries with responsive design</h1>
+		<p class="description"> 
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum numquam architecto accusantium 
+			modi repudiandae voluptatem laudantium, temporibus eaque magni porro, 
+			expedita facilis nemo beatae incidunt soluta dignissimos molestias rem natus!
+		</p>
 		<div class="box1"></div>
 		<div class="box2"></div>
+
+		<div class="image-container">
+			<!-- <img src="images/coffee.JPG" alt="coffee"> -->
+			<picture>
+				<source srcset="images/coffecopy.jpg" media="(max-width: 365px)">
+				<img src="images/coffee.JPG" alt="coffee">
+			</picture>
+		</div>
 	</main>
+
+	<script src="js/main.js"></script>
 	
 </body>
 </html>
